[package]
name = "river_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
dotenv = "0.15.0"
tokio-tungstenite = "0.20.1"
lazy_static = { version = "1.4.0" }
futures = { version = "0.3.28" }
url = { version = "2.4.1" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
toml = { version = "0.8.2" }
log = { version = "0.4.20" }
log4rs = { version = "1.2.0", features = ["console_appender", "file_appender"] }
serde_json = {version = "1.0.108" ,features = []}
scc = "2.0.3"
